# termillion

./: .gitignore  README.md  index.html  package.json  termillion.toml  todo.md  tsconfig.json
.github/workflows/: release.yml
scripts/: compress.mjs
src/: App.tsx  config.ts  font-checker.ts  layout-manager.ts  main.ts  styles.css  tab-manager.ts  terminal-output.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  pty.rs  validation.rs
src-tauri/src/pty/: core.rs  mod.rs  utils.rs
src/components/: ErrorBanner.tsx  TabsAndPanes.tsx  Terminal.tsx  WindowControls.tsx
src/components/Terminal/: Tabs.tsx  Terminal.tsx  TerminalManager.tsx  TerminalTabs.css  TerminalTabs.tsx  TerminalView.css  TerminalView.tsx  layout.ts  types.ts  utils.ts
src/contexts/: ConfigContext.tsx
src/hooks/: useSplitResize.ts
src/styles/: error-banner.css  tabs-and-panes.css
srcjs/: config.ts  main.ts
srcjs/styles/: tabs.css  terminal.css  window-controls.css
srcjs/terminal/: ProfileManager.ts  TabManager.ts  TerminalInstance.ts  TerminalManager.ts
srcjs/utils/: EventBus.ts  ShortcutManager.ts
