[package]
name = "termillion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termillion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8.1"
tauri-plugin-fs = "2"
toml = "0.8"
lazy_static = "1.5.0"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",
]


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"     # can experiment with 'z' as well
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

